# manysql

./: .env.example  .gitignore  PRESENTATION.md  README.md  grok.md  ideas.txt  pyproject.toml
eval/: PERFORMANCE.md  README.md  __init__.py  __main__.py  llm.py  perf_bench.py  prompt.py  runner.py  serve_lora.py  validator.py
eval/dataset/: __init__.py  bird.py  github_events.py  questions.py
eval/executors/: __init__.py  base.py  bird_sqlite_executor.py  factory.py  sqlite_executor.py  synthetic_executor.py  tinybird_executor.py
experiments/: findings.md
manysql/codegen/: __init__.py  __main__.py  batch.py  battery_emit.py  card_conformance.py  config_emit.py  effects_emit.py  grammar_agent.py  grammar_emit.py  ir_battery.py  lowering_agent.py  lowering_emit.py  metadata_emit.py  overrides_emit.py  overrides_loader.py  parse_battery.py  passes_emit.py  pipeline.py
manysql/dialects/: __init__.py  __main__.py  card.py  diff.py  registry.py
manysql/dialects/_campaigns/: 20260427T014119-bd622c59.json  20260427T024949-99f0e7da.json  20260427T034024-f7af474c.json  20260427T204607-2a087798.json  20260427T210029-1cadfccf.json
manysql/dialects/_reference/: grammar.lark  lowering.py  metadata.json  semantics.json  spec.json
manysql/dialects/_test_ci_eq/: __init__.py  effects.py  grammar.lark  lowering.py  spec.json
manysql/dialects/_test_with_ties/: __init__.py  grammar.lark  lowering.py  passes.py  spec.json
manysql/dialects/aggressive_alien/: __init__.py  battery.json  examples.sql  grammar.lark  lowering.py  overrides.py  semantics.json  spec.json
manysql/dialects/bigmaria_pivot/: __init__.py  effects.py  examples.sql  grammar.lark  lowering.py  metadata.json  overrides.py  passes.py  semantics.json  spec.json
manysql/dialects/bigquery_server_maria_pipeorder/: __init__.py  battery.json  effects.py  examples.sql  grammar.lark  lowering.py  metadata.json  overrides.py  passes.py  semantics.json  spec.json
manysql/dialects/bigquery_sqlite_notprefix/: __init__.py  battery.json  effects.py  examples.sql  grammar.lark  lowering.py  metadata.json  overrides.py  passes.py  semantics.json  spec.json
manysql/dialects/bqserver_qualify_filter/: __init__.py  battery.json  effects.py  examples.sql  grammar.lark  lowering.py  metadata.json  overrides.py  passes.py  semantics.json  spec.json
manysql/dialects/bracket_oracle_pg/: __init__.py  battery.json  effects.py  examples.sql  grammar.lark  lowering.py  metadata.json  overrides.py  passes.py  semantics.json  spec.json
manysql/dialects/clickhouse_oracle_samplelimit/: __init__.py  battery.json  effects.py  passes.py  (+7 more)
manysql/executor/: __init__.py  engine.py  expr_eval.py
manysql/golden/: __init__.py  queries.py
manysql/ir/: SCOPE.md  __init__.py  expr.py  plan.py  printer.py  types.py
manysql/llm/: __init__.py  client.py
manysql/oracle/: __init__.py  base.py  cross_dialect.py  duckdb_oracle.py  harness.py  property_oracle.py  reference_interpreter.py  sql_render.py  sqlite_oracle.py
manysql/spec/: __init__.py  dialect.py  semantics.py
manysql/storage/: __init__.py  catalog.py
tests/: test_bird_prompt.py  test_codegen_batch.py  test_codegen_expansion.py  test_codegen_pipeline.py  test_cross_dialect_oracle.py  test_date_diff_units.py  test_dialect_diff.py  test_dialect_effects.py  test_dialect_passes.py  test_dialect_registry_e2e.py  test_dialect_spec.py  test_eval_bird.py  test_executor_smoke.py  test_golden_queries.py  test_grammar_agent.py  test_harness.py  test_llm_client.py  test_lowering_agent.py  test_overrides.py  test_property_hypothesis.py  test_property_oracle.py  test_reference_dialect.py  test_reference_oracle.py  test_train_env.py  test_train_env_multidialect.py  test_train_env_synsql.py  test_train_env_trl.py  test_train_env_wikisql.py
train/: GPU_SETUP.md  __init__.py  grpo_gsm8k.py  grpo_sql.py  grpo_sql_distributed.py  run_grpo_gsm8k.sh  run_grpo_sql.sh  run_grpo_sql_ddp.sh  winning_runs.txt
train/env/: README.md  __init__.py  __main__.py  _ident.py  bird.py  catalog.py  curriculum.py  engine.py  rewards.py  rollout.py  sql_env.py  synsql.py  tasks.py  trl.py  types.py  wikisql.py
(+354 files in other folders)
