[project]
name = "manysql"
version = "0.1.0"
description = "Generator of synthetic SQL dialects with full per-dialect query engines, for LLM training data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pyarrow>=16",
    "lark>=1.1",
    "duckdb>=1.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.4",
]

[project.scripts]
# Canonical name; recommended in scripts to avoid the `eval` shell builtin.
manysql-eval = "eval.__main__:main"
# Convenience alias so `uv run eval --dry-run` works.
eval = "eval.__main__:main"
# Generate a manysql dialect package from a DialectSpec.
manysql-codegen = "manysql.codegen.__main__:main"
# Inspect already-generated dialect packages (e.g. battery diffs).
manysql-dialect = "manysql.dialects.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manysql", "eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic values (frequent in test fixtures)
    "PLR0912",  # too many branches (executor handlers are big)
    "PLR0915",  # too many statements
    "PLW2901",  # loop variable overwritten
    "B008",     # function calls in argument defaults (Pydantic Field)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
